[project]
name = "service-check"
version = "0.6.0.dev0"
description = "Small local watchdog runner for self-hosted services."
requires-python = ">=3.11"
dependencies = ["packaging>=23.0"]

[project.scripts]
service-check = "service_check.cli:main"

[tool.setuptools.packages.find]
include = ["service_check*"]
